# aiuce-memory-palace

./: .gitignore  README.md  pyproject.toml
aiuce_memory_palace/: __init__.py  palace.py  types.py
examples/: basic_usage.py
tests/: test_palace.py
